[package]
name = "zeppelin_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The Hindenburg of encryption tools."

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
digest = "0.10"
sha3 = "0.10"
hex-literal = "0.3"
console = { version = "0.15", optional = true }
zip = "0.6"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
# rayon = "1.5"

[features]
one_password = []
console = ["dep:console"]
all = ["one_password", "console"]
default = ["console"]