[package]
name = "zeppelin_core"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library that implements a stream cipher based on Balloon hashing"
repository = "https://github.com/lostinentropy/zeppelin_core"
readme = "README.md"
keywords = ["crypto"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
digest = "0.10"
sha3 = "0.10"
console = { version = "0.15", optional = true }
zip = { version = "0.6",  default-features = false, features = ["deflate"] }
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
# rayon = "1.5"

[dev-dependencies]
hex-literal = "0.3"

[features]
one_password = []
console = ["dep:console"]
all = ["one_password", "console"]
default = ["console"]